apps/cloudflared/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
